--- a/client/package.json
+++ b/client/package.json
@@ -25,7 +25,8 @@
     "zone.js": "~0.8.26",
     "bootstrap": "^4.0.0",
     "jquery": "^3.0.0",
-    "popper.js": "^1.0.0"
+    "popper.js": "^1.0.0",
+    "@ng-bootstrap/ng-bootstrap": "4.0.0"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.10.0",
